k8-spec/app/create-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: immersion-rc-proxy
  labels:
    purpose: rchain-immersion-proxy
    env: prd
spec:
  containers:
  - name: immersion-rc-proxy-container
    image: kayvank/immersion-rc-proxy:1.1-SNAPSHOT-83
    resources:
      limits:
        memory: "10G"
      requests:
        memory: "5G"
