k8-spec/app/proxy-deploy-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsong-proxy
  labels:
    app: rsong-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rsong-proxy
      tier: proxy
  template:
    metadata:
      labels:
        app: rsong-proxy
        tier: proxy
    spec:
      containers:
      - name: rsong-proxy
        image: kayvank/rsong-proxy:1.0.7-SNAPSHOT-berlin-demo
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9000
