k8-spec/app/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsong-proxy
  labels:
    app: rsong-proxy
    tier: proxy
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - port: 9000
  selector:
    app: rsong-proxy
    tier: proxy
