k8-spec/app/redis-slave-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: redis-slave
    labels:
      app: redis
      role: slave
      tier: backend
  spec:
    ports:
    - port: 6379
    selector:
      app: redis
      role: slave
      tier: backend
